--- a/frontend/winddatenApp/src/app/tabs/tabs.page.html
+++ b/frontend/winddatenApp/src/app/tabs/tabs.page.html
@@ -1,9 +1,9 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+    <ion-tab-button tab="map-tab">
+      <ion-icon name="map-outline"></ion-icon>
+      <ion-label>Karte</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
