Added More Details of Windparks

--- a/frontend/winddatenApp/src/app/pages/park-details/park-details.page.html
+++ b/frontend/winddatenApp/src/app/pages/park-details/park-details.page.html
@@ -17,10 +17,11 @@
     <ion-card-content>
       <p>Windräder: {{ windpark.amount }} MW</p>
       <p>Leistung: {{ windpark.performance }} MW</p>
-      <br>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus aut dolorum expedita! In architecto vel repudiandae ipsum consectetur nesciunt laboriosam sed quo! Voluptas quam ipsam explicabo, unde quidem ratione earum dolor doloremque libero ut rerum aliquam, impedit consequatur sequi est. Cupiditate accusamus sint quasi minus, molestiae ipsam iure doloribus labore consectetur voluptatum sit eaque nulla rerum, autem id harum culpa consequatur fugiat. Aliquam mollitia hic recusandae provident voluptas facilis vero fugiat culpa officia? Quo dicta ea quidem obcaecati cum cumque debitis veniam, sequi deserunt ipsa veritatis harum eos enim quis at doloremque nam commodi dolorum fuga quas fugiat minus. Unde.
-      </p>
+      <p>Baujahr: {{ windpark.constructionYear }}</p>
+      <p>Typ: {{ windpark.type }}</p>
+      <p>Ort: {{ windpark.place }}</p>
+      <p>Land-Kreis: {{ windpark.district }}</p>
+      <p>Bemerkungen: {{ windpark.notes }}</p>
     </ion-card-content>
   </ion-card>
 </ion-content>
