--- a/frontend/winddatenApp/src/app/pages/park-details/park-details.page.html
+++ b/frontend/winddatenApp/src/app/pages/park-details/park-details.page.html
@@ -10,7 +10,7 @@
 <img src="https://www1.wdr.de/nachrichten/westfalen-lippe/Vorzeigemodell-windpark-coesfeld-100~_v-gseagaleriexl.jpg" id="backdrop">
 <ion-content class="ion-padding">
   <ion-card *ngIf="windpark">
-    <img src="https://www.tagesschau.de/multimedia/bilder/offshore-windpark-105~_v-original.jpg"/>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Windpark-Wind-Farm.jpg"/>
     <ion-card-header>
       <ion-card-title>{{ windpark.name }}</ion-card-title>
     </ion-card-header>
